# Spk-s-Hud

./: .gitignore  README.md  css_hub.sp  package-lock.json  package.json  tsconfig.json  vite.config.ts
.history/src-tauri/src/: main_20250211231538.rs  main_20250212002228.rs
.obsidian/: workspace.json
Sourcemod/: SpkHud.sp  css_hub.sp
src/: App.vue
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  window.rs
src-tauri/src/command/: connection.rs  mod.rs  system.rs
src/components/: index.vue
src/style/: common.css  hud.css  main.css  menu.css  notifications.css
