[package]
name = "Spk-s_Hud"
version = "0.1.2"
description = "A CS:S Completion Hud By Spk"
authors = ["Spk"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.0", features = [ "shell-open"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
