[package]
name = "Spk-s_Hud"
version = "0.2.1"
description = "A CS:S Completion Hud By Spk"
authors = ["Spk"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.8.2", features = [ "shell-open"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
